istio/authz/championships-authz.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: championships-authz
spec:
  selector:
    matchLabels:
      app: championships
      version: v1
  rules:
    - to:
        - operation:
            methods: ["GET","POST","PUT","DELETE","OPTIONS"]
            paths: ["/api/championships*"]
      when:
        - key: request.auth.claims[scope]
          values: ["championship:write", "championship:read"]
