istio/authz/matches-authz.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: matches-authz
spec:
  selector:
    matchLabels:
      app: matches
      version: v1
  rules:
    - to:
        - operation:
            methods: ["GET","POST","PUT","DELETE","OPTIONS"]
            paths: ["/api/matches*"]
      when:
        - key: request.auth.claims[scope]
          values: ["match:write", "match:read"]
